
public class LittleZelda {

  // constructor

  public LittleZelda() {

  }

  // MAP //

  public static void main(String[] args) {
    new LittleZeldaGame().start();

  }
}
